CREAZIONE HEADER E MAIN

--- a/index.html
+++ b/index.html
@@ -8,6 +8,84 @@
     <title>Discord</title>
 </head>
 <body>
-    
+    <!-- INIZIO HEADER -->
+    <header>
+        <div class="conteiner-header">
+            <div class="row-header">
+                <div class="col">
+                    <div class="content"> logo</div>
+                </div>
+                <div class="col">
+                    <div class="content">link link link link link</div>
+                </div>
+                <div class="col">
+                    <div class="content">login</div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- FINE HEADER -->
+    <main>
+        <!-- FIRST SECTION BLU  container rosa-->
+        <div class="background-blu">
+            <div class="conteiner-pink">
+                <div class="row">
+                    <div class="col">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FINE FIRST div BLU container rosa -->
+        <!-- second div BLU E ROSA-->
+        <div >
+            <div class="conteiner-bicolor">
+                <div class="row-due">
+                    <div class="col left">
+                    </div>
+                    <div class="col right">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FINE second div BLU E ROSA -->
+        <!-- second div BLU E ROSA-->
+        <div >
+            <div class="conteiner-bicolor grey">
+                <div class="row-due">
+                    <div class="col right">
+                    </div>
+                    <div class="col left">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FINE second div BLU E ROSA -->
+        <!-- second div BLU E ROSA-->
+        <div >
+            <div class="conteiner-bicolor">
+                <div class="row-due">
+                    <div class="col left">
+                    </div>
+                    <div class="col right">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FINE second div BLU E ROSA -->
+        <!-- div conteiner  green -->
+        <div class="background grey">
+            <div class="conteiner-green">
+                <div class="row-green">
+                    <div class="col-green">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- FINE div conteiner  green  -->
+    </main>
 </body>
 </html>
