FINE ESERCIZIO CON FOOTER E CORREZIONE

--- a/index.html
+++ b/index.html
@@ -12,22 +12,16 @@
     <header>
         <div class="conteiner-header">
             <div class="row-header">
-                <div class="col">
-                    <div class="content"> logo</div>
-                </div>
-                <div class="col">
-                    <div class="content">link link link link link</div>
-                </div>
-                <div class="col">
-                    <div class="content">login</div>
-                </div>
+                <div class="content-20"> logo</div>
+                <div class="content-60"> link link link link link</div>
+                <div class="content-20" id="login"> login</div>
             </div>
         </div>
     </header>
     <!-- FINE HEADER -->
     <main>
         <!-- FIRST SECTION BLU  container rosa-->
-        <div class="background-blu">
+        <div class="background blu">
             <div class="conteiner-pink">
                 <div class="row">
                     <div class="col">
@@ -41,9 +35,9 @@
         <div >
             <div class="conteiner-bicolor">
                 <div class="row-due">
-                    <div class="col left">
+                    <div class="col-due left">
                     </div>
-                    <div class="col right">
+                    <div class="col-due right">
 
                     </div>
                 </div>
@@ -54,9 +48,9 @@
         <div >
             <div class="conteiner-bicolor grey">
                 <div class="row-due">
-                    <div class="col right">
+                    <div class="col-due right">
                     </div>
-                    <div class="col left">
+                    <div class="col-due left">
 
                     </div>
                 </div>
@@ -67,16 +61,16 @@
         <div >
             <div class="conteiner-bicolor">
                 <div class="row-due">
-                    <div class="col left">
+                    <div class="col-due left">
                     </div>
-                    <div class="col right">
+                    <div class="col-due right">
                     </div>
                 </div>
             </div>
         </div>
         <!-- FINE second div BLU E ROSA -->
         <!-- div conteiner  green -->
-        <div class="background grey">
+        <div class="background-due grey">
             <div class="conteiner-green">
                 <div class="row-green">
                     <div class="col-green">
@@ -87,5 +81,40 @@
         </div>
         <!-- FINE div conteiner  green  -->
     </main>
+    <!-- INIZIO FOOTER -->
+    <footer>
+        <!-- PRIMA PARTE FOOTER -->
+        <div >
+            <div class="background black">
+                <div class="row-due">
+                    <div class="col-due footer-left">
+                    </div>
+                    <div class="col-due footer-right">
+                    </div>
+                    <div class="col-due footer-right">
+                    </div>
+                    <div class="col-due footer-right">
+                    </div>
+                    <div class="col-due footer-right">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="conteiner-footer">
+            <div class="row-footer">
+                <div class="col-footer">
+                    <div class="content-footer ">
+                        logo
+                    </div>
+                    <div class="content-footer">
+                        bottone
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- FINE PRIMA FASE FOOTER -->
+    </footer>
+    <!-- FINE FOOTER -->
 </body>
 </html>
